style.css
@font-face {
    font-family: 'norsebold';
    src: url('font/webfontkit-20250105-110152/norse-bold-webfont.woff2') format('woff2'),
         url('font/webfontkit-20250105-110152/norse-bold-webfont.woff') format('woff');
    font-weight: normal;
    font-style: normal;

}



body {
    display: flex;
    font-family: Helvetica;
}

/* left side */

#image {
    height: 100vh;
    width: 40vw;
    background-image: url(asset/photo-1585202900225-6d3ac20a6962.avif);
    background-size: cover;
}

#logo-wrapper {
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: rgba(0, 0, 0, 0.5);
    width: 100%;
    height: 150px;
    margin-top: 100px;
}

#logo-wrapper h1 {
    color: white;
    font-family: 'norsebold';
    font-size: 5rem;
}

#logo-wrapper img {
    max-width: 100px;
    object-fit: scale-down;
    margin-right: 12px;
}


/* right side */



#right-side {
    font-weight: bold;
    width: 60vw;
    height: 100vh;
    display: flex;
    justify-content: center;
    align-items: center;
}

#right-side p {
    margin-bottom: 24px;
    margin-left: 40px;
}

#right-side p + p {
    margin-left: 40px;
    margin-bottom: 40px;
}

#right-side span {
    font-style: italic;
}

.form-background input {
    font-weight: 100;
    font-size: 12px;
    padding: 8px;
    width: 100%;
    border-radius: 3px;
    border: 1px solid rgba(0, 0, 0, 0.7);
}

.form-background {
    box-shadow: 0px 5px 20px rgba(0, 0, 0, 0.251);
    display: flex;
    flex-direction: column;
    padding: 40px;
}

.row1, .row2, .row3 {
    display: flex;
}

.row1, .row2 {
    margin-bottom: 20px;
}

.form-background  label{
    display: block;
    color: rgba(0, 0, 0, 0.612);
    text-transform: uppercase;  
    font-size: 12px;
    font-weight: 600;
}



.form-group {
    width: 50%;
    padding-right: 50px;
}

button  {
    margin-top: 20px;
    background-color: #596D48;
    color: white;
    margin-left: 40px;
    padding: 8px 32px;
    border-radius: 8px;
    outline: none;
    border: none;
    margin-bottom: 12px;
}

.login-text {
    color: #596D48;
}

button + p {
    display: inline;
    font-size: 12px;
    font-weight: 100;
}

input:focus {
    outline: none;
    border: 1px solid rgb(36, 36, 207);
    box-shadow: 0px -5px 5px rgba(0, 0, 0, 0.1);
}

input:invalid {
    border: 1px solid red;
}

